# iris

./: .gitmodules  CLAUDE.md  CMakeLists.txt  README.md
assets/: defaultbg.pdn
docs/: history.md  memmap.md  owners.md  paging.md  performance.md  productids.md  starthere.md
docs/boards/: inter.md  ip2.md
docs/prom/: promboot.md
src/: CMakeLists.txt  Iris.hpp  main.cpp
src/base/: emulation.cpp  emulation.hpp
src/base/cmdline/: cmdline.cpp  cmdline.hpp
src/base/component/: addrspace.cpp  addrspace.hpp  component.cpp  component.hpp  memory.cpp  memory.hpp
src/base/cvar/: cvar.cpp  cvar.hpp
src/base/filesystem/: filesystem.cpp  filesystem.hpp
src/base/machine/: machine.cpp  machine.hpp
src/coherent/: coherent.hpp  coherent_core.cpp  coherent_gui.cpp  coherent_gui_imgui.cpp  coherent_gui_imgui.hpp  coherent_gui_logging.cpp  coherent_gui_main.cpp  coherent_gui_style.cpp
src/component/: addrspace.cpp  addrspace.hpp  component.cpp  component.hpp  memory.cpp  memory.hpp
src/component/cpu/: cpu.hpp  mc68020.hpp  mc68020_core.cpp  mc68020_debug.cpp  mc68020_moira_bridge.hpp
src/component/cpu/moira/: CMakeLists.txt  Moira.cpp  Moira.h  MoiraALU.h  MoiraALU_cpp.h  MoiraConfig.h  MoiraDasmFPU_cpp.h  MoiraDasmMMU_cpp.h  MoiraDasm_cpp.h  MoiraDataflow_cpp.h  MoiraDebugger.cpp  MoiraDebugger.h  MoiraExceptions_cpp.h  MoiraExec_cpp.h  MoiraInit.h  MoiraTypes.h  StrWriter.h  StrWriter_cpp.h
src/component/ip2/: ip2_duart.cpp  ip2_duart.hpp  ip2_mmu.cpp  ip2_mmu.hpp  ip2_mmu_debug.cpp  prom.cpp  prom.hpp  prom_sram.hpp
src/component/rom/: prom.cpp  prom.hpp
src/cpu/: mc68020.hpp  mc68020_core.cpp
src/cpu/coherent/: coherent.hpp  coherent_core.cpp  coherent_gui.cpp
src/platform/formats/: ini.hpp
src/platform/logging/: logging.hpp
src/platform/util/: util.hpp
src/render/: render.hpp
src/render/sdl3/: render_sdl3.hpp  render_sdl3_core.cpp
